--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,18 @@
 			<version>2.1.1</version>
 		</dependency>
 
+		<!-- common fileupload 파일업로드처리 -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.4</version>
+		</dependency>
+
 	</dependencies>
 
 	<repositories>
